# covplot

./: Cargo.toml  README.md  global.css  index.html  package-lock.json  package.json
app/: index.ts
frontend/: Cargo.toml
frontend/src/: app.rs  data.rs  data_source.rs  graph.rs  graph_render.rs  lib.rs
src/: lib.rs
