[package]
authors = ["Jackson Owens"]
categories = ["wasm"]
description = "CoVID-19 plots"
license = "MIT"
name = "covplot"
readme = "./README.md"
repository = "https://github.com/jbowens/covplot.git"
version = "0.13.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1"
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }
serde = "1.0"
serde_derive = "1.0"
dotenv = "0.15"
failure = "0.1"
yew = { version = "0.14", features = ["toml", "yaml", "msgpack", "cbor", "web_sys"]}
yew-router = { version = "0.11", features = ["web_sys"]}
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }

[build]
target="wasm32-unknown-unknown"

[profile.release]
lto = true
